Closed Bug 1409466 Opened 8 years ago Closed 8 years ago

CC logging seems to be fairly broken on try

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: nika, Assigned: jonco)

Details

Attachments

(1 file)

I enabled CC logging by making this patch: https://hg.mozilla.org/try/rev/8f78b619fe0fcb0c6bb000cc828ed9971a394643, and pushed it to try - It appears to be nearly completely broken based on how many tests went orange with failures like: Assertion failure: !JS::CurrentThreadIsHeapCycleCollecting(), at /builds/worker/workspace/build/src/js/src/jsgc.cpp:8926 [log…] (try run: https://treeherder.mozilla.org/#/jobs?repo=try&revision=8a1e154271d4677c615d08468c2be3ecdcb2541e)
Flags: needinfo?(continuation)
That is strange. Just as a note, logging every CC in a mochitest run is going to produce an absurd amount of logs. I'm not how many files our infrastructure can handle. Even doing it locally for something that takes like 30 seconds to run generates a huge number of logs.
Sorry I've been ignoring this. Hopefully you haven't been too blocked on it. Jon, do you know what this assertion means? It kind of sounds like we're CCing at some point when we shouldn't be.
Flags: needinfo?(continuation) → needinfo?(jcoppeard)
The problem is that nsJSScriptTimeoutHandler calls js::UncheckedUnwrap during cycle collection if CC logging is enabled, and that ends up asserting that we're not inside CC. This is a good thing, because UncheckedUnwrap can do an expose on the unwrapped object which can alter the result of cycle collection. We can replace this with a call to js::UncheckedUnwrapWithoutExpose since the result does not escape. Try build with this change has tests failing with timeouts rather than assertion failures: https://treeherder.mozilla.org/#/jobs?repo=try&revision=28582d1fc54603c099419f049179dfc16cc92820&group_state=expanded&selectedJob=141963960
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
Attachment #8925067 - Flags: review?(continuation)
Cool, thanks! And yeah, I'd expect timeouts if all CCs are being logged with full logs. ;)
Attachment #8925067 - Attachment is patch: true
Attachment #8925067 - Flags: review?(continuation) → review+
Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/7135395eacd6 Fix assertion failures when CC logging is enabled r=mccr8
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: