Bug 1409466 - Fix assertion failures when CC logging is enabled r=mccr8